2011-10-13  Julien Chaffraix  <jchaffraix@webkit.org>

        Deprecate event.layerX and event.layerY in WebKit
        https://bugs.webkit.org/show_bug.cgi?id=69951

        Reviewed by Darin Adler.

        layerX and layerY were concepts of the old Netscape code that stayed
        in WebKit for a long time without changes. Now the code is completely
        wrong and Mozilla has expressed some interest in removing it from their
        API too.

        This is a first step in the removal as layerX and layerY are exposed
        in some APIs. Chromium and Win are fine with removing the property
        directly, but ObjC needs to deprecate them first.

        * bindings/objc/PublicDOMInterfaces.h: Mark the API as deprecated.

        * dom/MouseRelatedEvent.cpp:
        (WebCore::MouseRelatedEvent::layerX):
        (WebCore::MouseRelatedEvent::layerY):
        * dom/UIEvent.cpp:
        (WebCore::UIEvent::layerX):
        (WebCore::UIEvent::layerY):
        Added a call to warnDeprecatedLayerXYUsage in the previous functions.

        (WebCore::UIEvent::warnDeprecatedLayerXYUsage): Print a warning in the
        console about the removal of event.layerX and event.layerY in the near future.

        * dom/UIEvent.h: Added warnDeprecatedLayerXYUsage.

2011-10-03  Robert Hogan  <robert@webkit.org>

        CSS 2.1 failure: inline-replaced-height-008.htm
        https://bugs.webkit.org/show_bug.cgi?id=69273

        Reviewed by Simon Fraser.

        Test: css2.1/20110323/inline-block-replaced-height-008.html

        Per http://www.w3.org/TR/CSS21/visudet.html#inline-replaced-height,  if 'height' has computed value of 
        'auto', the replaced element has an intrinsic ratio and its used width is known or resolved, then 
        the used value of 'height' is determined by the equation (used width) / (intrinsic ratio).

        * rendering/RenderImage.cpp:
        (WebCore::RenderImage::computeReplacedLogicalHeight):
        * rendering/RenderReplaced.h:
