@@ -98,6 +98,12 @@
 #include "SVGNames.h"
 #endif
 
+#if PLATFORM(CHROMIUM)
+// FIXME: border radius clipping triggers too-slow path on Chromium
+// https://bugs.webkit.org/show_bug.cgi?id=69866
+#define DISABLE_ROUNDED_CORNER_CLIPPING
+#endif
+
 #define MIN_INTERSECT_FOR_REVEAL 32
 
 using namespace std;
@@ -2555,6 +2561,7 @@ void RenderLayer::paintOverlayScrollbars(GraphicsContext* p, const LayoutRect& d
     m_containsDirtyOverlayScrollbars = false;
 }
 
+#ifndef DISABLE_ROUNDED_CORNER_CLIPPING
 static bool inContainingBlockChain(RenderLayer* startLayer, RenderLayer* endLayer)
 {
     if (startLayer == endLayer)
@@ -2568,6 +2575,7 @@ static bool inContainingBlockChain(RenderLayer* startLayer, RenderLayer* endLaye
     
     return false;
 }
+#endif
 
 void RenderLayer::clipToRect(RenderLayer* rootLayer, GraphicsContext* context, const LayoutRect& paintDirtyRect, const ClipRect& clipRect,
                              BorderRadiusClippingRule rule)
@@ -2580,6 +2588,7 @@ void RenderLayer::clipToRect(RenderLayer* rootLayer, GraphicsContext* context, c
     if (!clipRect.hasRadius())
         return;
 
+#ifndef DISABLE_ROUNDED_CORNER_CLIPPING
     // If the clip rect has been tainted by a border radius, then we have to walk up our layer chain applying the clips from
     // any layers with overflow. The condition for being able to apply these clips is that the overflow object be in our
     // containing block chain so we check that also.
@@ -2593,6 +2602,7 @@ void RenderLayer::clipToRect(RenderLayer* rootLayer, GraphicsContext* context, c
         if (layer == rootLayer)
             break;
     }
+#endif
 }
 
 void RenderLayer::restoreClip(GraphicsContext* p, const LayoutRect& paintDirtyRect, const ClipRect& clipRect)
