@@ -1,3 +1,13 @@
+2011-10-13  Tom Hudson  <tomhudson@google.com>
+
+        Revert border radius clips (r95239) for Chromium due to performance issues. Update test expectations to skip border radius clip layout tests.
+        https://bugs.webkit.org/show_bug.cgi?id=69844
+
+        Reviewed by Simon Fraser.
+
+        * rendering/RenderLayer.cpp:
+        (WebCore::RenderLayer::clipToRect): Only process border radius clips #if !PLATFORM(CHROMIUM)
+
 2011-10-13  Julien Chaffraix  <jchaffraix@webkit.org>
 
         Deprecate event.layerX and event.layerY in WebKit
